# worm

./: .clang-format  .editorconfig  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  vcpkg.json
cmake/: Dependencies.cmake
src/: AGENTS.md  CMakeLists.txt
src/connection/: CMakeLists.txt  client.cpp  client.hpp  index.hpp  mysql-client.cpp  mysql-client.hpp  pg-client.cpp  pg-client.hpp  pgclient.cpp  pgclient.hpp  sqlite-client.cpp  sqlite-client.hpp
src/core/: CMakeLists.txt  core.hpp  expression.cpp  expression.hpp  ordering.cpp  ordering.hpp  parameter.hpp  where-clause.cpp  where-clause.hpp
src/errors/: CMakeLists.txt  database-exception.hpp  invalid-arg-exception.hpp
src/reflection/: CMakeLists.txt  concepts.hpp  field.hpp  index.hpp  lookup.hpp  metadata.hpp  reflection.hpp  snapshot.hpp  visit.hpp
src/utils/: CMakeLists.txt  client-factory.cpp  client-factory.hpp  dependency-injection.hpp  hash.hpp  helpers.cpp  helpers.hpp  logger.hpp
tests/: AGENTS.md  CMakeLists.txt
tests/connection/: CMakeLists.txt  client-tests.cpp  mysql-client-tests.cpp  pg-client-tests.cpp  pgclient-tests.cpp  sqlite-client-tests.cpp
tests/core/: CMakeLists.txt  expression-tests.cpp  ordering-tests.cpp  parameter-tests.cpp  where-clause-tests.cpp
tests/errors/: CMakeLists.txt  database-exception-tests.cpp  invalid-arg-exception-tests.cpp
tests/reflection/: CMakeLists.txt  concepts-tests.cpp  field-tests.cpp  lookup-tests.cpp  metadata-tests.cpp  snapshot-tests.cpp  visit-tests.cpp
tests/utils/: CMakeLists.txt  client-factory-tests.cpp  dependency-injection-tests.cpp  hash-tests.cpp  helpers-tests.cpp  logger-tests.cpp
